refactor: 메서드 분리
메서드가 단일 책임을 가지도록 분리하였다.

Co-authored-by: g0rnn <gyunh01@pukyong.ac.kr>